trying to fix datetime styling on mobile

--- a/css/enquiry.css
+++ b/css/enquiry.css
@@ -46,6 +46,11 @@ input {
     font-size: 15px;
 }
 
+input[type="datetime-local"] {
+    appearance: none;
+    -webkit-appearance: none;
+}
+
 input.error {
     -webkit-animation: shake 0.15s ease-in-out 0s 2;
     animation: shake 0.15s ease-in-out 0s 2;
